.k8s/1-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:  
  labels:
    kubernetes.io/metadata.name: arahk-cms
  name: arahk-cms
spec:
  finalizers:
  - kubernetes
status:
  phase: Active
