.k8s/3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api-deployment
  name: api-deployment
  namespace: arahk-cms
spec:
  progressDeadlineSeconds: 600
  replicas: 1  
  selector:
    matchLabels:
      app: api-deployment
  template:
    metadata:      
      labels:
        app: api-deployment
    spec:
      containers:
      - image: arahk-cms:latest
        imagePullPolicy: IfNotPresent
        name: arahk-cms-api
        ports:
        - containerPort: 7104
          protocol: TCP
