.k8s/5-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:  
  generation: 1
  name: api-ingress
  namespace: arahk-cms
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 7104
